--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -7,20 +7,15 @@ footer {
      p {
         font-size: 24px;
         color: white;
-    }
+        @media (max-width: 767.98px) {
+            font-size: 12px;
+            width: 122px;
+            margin: 10px;
+        }
     img {
         height: 39px;
     }
-}
+    }
+}    
 /****** Media queries ***********/
 /* Small devices (phones, less than 768px) */
-
-@media (max-width: 767.98px) {
-footer {
-    p{
-        font-size: 12px;
-        width: 122px;
-        margin: 10px;
-    }
-}
-}
